build_avutil.log
[  0%] Building C object libavutil/CMakeFiles/avutil.dir/frame.c.o
/app/libavutil/frame.c: In function ‘get_video_buffer’:
/app/libavutil/frame.c:73:16: error: ‘HAVE_SIMD_ALIGN_64’ undeclared (first use in this function)
   73 | #define ALIGN (HAVE_SIMD_ALIGN_64 ? 64 : 32)
      |                ^~~~~~~~~~~~~~~~~~
/app/libavutil/frame.c:90:17: note: in expansion of macro ‘ALIGN’
   90 |         align = ALIGN;
      |                 ^~~~~
/app/libavutil/frame.c:73:16: note: each undeclared identifier is reported only once for each function it appears in
   73 | #define ALIGN (HAVE_SIMD_ALIGN_64 ? 64 : 32)
      |                ^~~~~~~~~~~~~~~~~~
/app/libavutil/frame.c:90:17: note: in expansion of macro ‘ALIGN’
   90 |         align = ALIGN;
      |                 ^~~~~
/app/libavutil/frame.c: In function ‘get_audio_buffer’:
/app/libavutil/frame.c:73:16: error: ‘HAVE_SIMD_ALIGN_64’ undeclared (first use in this function)
   73 | #define ALIGN (HAVE_SIMD_ALIGN_64 ? 64 : 32)
      |                ^~~~~~~~~~~~~~~~~~
/app/libavutil/frame.c:164:17: note: in expansion of macro ‘ALIGN’
  164 |         align = ALIGN;
      |                 ^~~~~
/app/libavutil/frame.c: In function ‘av_frame_apply_cropping’:
/app/libavutil/frame.c:798:50: warning: implicit declaration of function ‘ff_ctz’ [-Wimplicit-function-declaration]
  798 |         int log2_crop_align = frame->crop_left ? ff_ctz(frame->crop_left) : INT_MAX;
      |                                                  ^~~~~~
gmake[3]: *** [libavutil/CMakeFiles/avutil.dir/build.make:566: libavutil/CMakeFiles/avutil.dir/frame.c.o] Error 1
gmake[2]: *** [CMakeFiles/Makefile2:226: libavutil/CMakeFiles/avutil.dir/all] Error 2
gmake[1]: *** [CMakeFiles/Makefile2:233: libavutil/CMakeFiles/avutil.dir/rule] Error 2
gmake: *** [Makefile:124: avutil] Error 2
